[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/worlds/Level_template.gd" type="Script" id=1]
[ext_resource path="res://src/actors/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://src/worlds/platforms.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/menu_tile.png" type="Texture" id=5]
[ext_resource path="res://src/buttons/backToMenuControl.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/texts/currentFloorText.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/worlds/wall.tscn" type="PackedScene" id=8]

[sub_resource type="TileSet" id=1]
0/name = "menu_tile.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "menu_tile.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "menu_tile.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0

[node name="Level_template" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 640, -97.25 )
z_index = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
offset = Vector2( 0, -1080 )
transform = Transform2D( 1, 0, 0, 1, 0, -1080 )

[node name="background" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = 1089.0
margin_right = 632.0
margin_bottom = 1449.0
texture = ExtResource( 3 )

[node name="platforms" parent="." instance=ExtResource( 4 )]

[node name="bottombar" type="CanvasLayer" parent="."]

[node name="Button_background" type="TileMap" parent="bottombar"]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
collision_layer = 8
format = 1
tile_data = PoolIntArray( 1310720, 1, 0, 1310721, 1, 0, 1310722, 1, 0, 1310723, 1, 0, 1310724, 1, 0, 1310725, 1, 0, 1310726, 1, 0, 1310727, 1, 0, 1310728, 1, 0, 1310729, 1, 0, 1310730, 1, 0, 1310731, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1310734, 1, 0, 1310735, 1, 0, 1310736, 1, 0, 1310737, 1, 0, 1310738, 1, 0, 1310739, 1, 0, 1310740, 1, 0, 1310741, 1, 0, 1310742, 1, 0, 1310743, 1, 0, 1310744, 1, 0, 1310745, 1, 0, 1310746, 1, 0, 1310747, 1, 0, 1310748, 1, 0, 1310749, 1, 0, 1310750, 1, 0, 1310751, 1, 0, 1310752, 1, 0, 1310753, 1, 0, 1310754, 1, 0, 1310755, 1, 0, 1310756, 1, 0, 1310757, 1, 0, 1310758, 1, 0, 1310759, 1, 0, 1376256, 1, 0, 1376257, 1, 0, 1376258, 1, 0, 1376259, 1, 0, 1376260, 1, 0, 1376261, 1, 0, 1376262, 1, 0, 1376263, 1, 0, 1376264, 1, 0, 1376265, 1, 0, 1376266, 1, 0, 1376267, 1, 0, 1376268, 1, 0, 1376269, 1, 0, 1376270, 1, 0, 1376271, 1, 0, 1376272, 1, 0, 1376273, 1, 0, 1376274, 1, 0, 1376275, 1, 0, 1376276, 1, 0, 1376277, 1, 0, 1376278, 1, 0, 1376279, 1, 0, 1376280, 1, 0, 1376281, 1, 0, 1376282, 1, 0, 1376283, 1, 0, 1376284, 1, 0, 1376285, 1, 0, 1376286, 1, 0, 1376287, 1, 0, 1376288, 1, 0, 1376289, 1, 0, 1376290, 1, 0, 1376291, 1, 0, 1376292, 1, 0, 1376293, 1, 0, 1376294, 1, 0, 1376295, 1, 0, 1441792, 1, 0, 1441793, 1, 0, 1441794, 1, 0, 1441795, 1, 0, 1441796, 1, 0, 1441797, 1, 0, 1441798, 1, 0, 1441799, 1, 0, 1441800, 1, 0, 1441801, 1, 0, 1441802, 1, 0, 1441803, 1, 0, 1441804, 1, 0, 1441805, 1, 0, 1441806, 1, 0, 1441807, 1, 0, 1441808, 1, 0, 1441809, 1, 0, 1441810, 1, 0, 1441811, 1, 0, 1441812, 1, 0, 1441813, 1, 0, 1441814, 1, 0, 1441815, 1, 0, 1441816, 1, 0, 1441817, 1, 0, 1441818, 1, 0, 1441819, 1, 0, 1441820, 1, 0, 1441821, 1, 0, 1441822, 1, 0, 1441823, 1, 0, 1441824, 1, 0, 1441825, 1, 0, 1441826, 1, 0, 1441827, 1, 0, 1441828, 1, 0, 1441829, 1, 0, 1441830, 1, 0, 1441831, 1, 0 )

[node name="backToMenuControl" parent="bottombar" instance=ExtResource( 6 )]

[node name="currentFloorControl" type="Control" parent="bottombar"]
margin_right = 40.0
margin_bottom = 40.0

[node name="currentFloorField" parent="bottombar/currentFloorControl" instance=ExtResource( 7 )]
margin_left = 300.0
margin_right = 498.0
text = ""

[node name="currentFloorText" parent="bottombar/currentFloorControl" instance=ExtResource( 7 )]
margin_left = 90.0
margin_right = 288.0

[node name="maxFloorControl" type="Control" parent="bottombar"]
margin_left = 730.0
margin_right = 770.0
margin_bottom = 40.0

[node name="maxFloorField" parent="bottombar/maxFloorControl" instance=ExtResource( 7 )]
margin_left = 330.0
margin_right = 528.0
text = ""

[node name="maxFloorText" parent="bottombar/maxFloorControl" instance=ExtResource( 7 )]
margin_left = 100.0
margin_right = 324.0
text = "Maximum Floor: "

[node name="wall_left" parent="." instance=ExtResource( 8 )]
position = Vector2( -10, 0 )

[node name="wall_right" parent="." instance=ExtResource( 8 )]
position = Vector2( 1290, 0 )
